k8s/kubone/sonidosysonados/blog/blog-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
        tier: wordpress
    spec:
      containers:
      - image: wordpress:5.2
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        resources:
          limits:
            cpu: 500m
            memory: 768M
          requests:
            cpu: 50m
            memory: 512M
        volumeMounts:
          - name: blog-volume
            mountPath: /var/www/html
      volumes:
        - name: blog-volume
          persistentVolumeClaim:
            claimName: blog-pvc
