k8s/kubone/sonidosysonados/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
        tier: wordpress
    spec:
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - wordpress
      volumes:
        - name: html
          emptyDir: {}
      containers:
        - image: eu.gcr.io/kubone/sonidosysonados/cms/nginx:0.1.0
          name: nginx
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: html
              mountPath: /var/www/html
        - image: eu.gcr.io/kubone/sonidosysonados/cms/wp:0.1.0
          name: wordpress
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: html
              mountPath: /var/www/html
