k8s/kubone/sonidosysonados/blog/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blog
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
    - name: http
      port: 80
      targetPort: 80
