k8s/kubone/sonidosysonados/blog/blog-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
spec:
  rules:
  - host: sonidosysonados.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: http
  - host: www.sonidosysonados.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: http
